# MEMS-scripts

./: .gitignore  .setup.sh.kate-swp  README.md  bom.py  config.json  consolidate.py  library.py  mems.kicad_jobset  mems.py  pyproject.toml  requirements.txt  setup.sh  utils.py
src/: main.py
src/mems/: bom.py  consolidate.py  engineering.py  library.py  main.py  mems.py  outputs.py  suppliers.py  templates.py  utils.py  variable.py
src/mems/data/: drc.kicad_jobset  erc.kicad_jobset  hw.gitignore.template  jlcpcb.kicad_jobset  layer_presets_template.json  outputs.kicad_jobset  pdf.kicad_jobset
src/mems/release/: bom.py  release.py
