[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "mems"
version = "0.1.0"
dependencies = ["colorama==0.4.6", "kiutils @ git+https://github.com/antmicro/kiutils.git@main", "termcolor==2.2.0", "requests==2.28.2", "BeautifulSoup4==4.12.3", "GitPython==3.1.43", "pyxdg==0.28", "sane_logging @ git+https://github.com/JJendryka/sane_logging.git"]
scripts = {mems = "main:main"}

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]

[tool.ruff]
select = ["E", "F", "N", "B", "A", "RET"]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
