[build-system]
requires = ["setuptools >= 78"]
build-backend = "setuptools.build_meta"

[project]
name = "mems"
version = "0.1.0"
dependencies = ["colorama", "kiutils @ git+https://github.com/antmicro/kiutils.git@main", "termcolor", "requests", "BeautifulSoup4", "GitPython", "pyxdg", "sane_logging @ git+https://github.com/JJendryka/sane_logging.git"]
scripts = {mems = "mems.main:main"}
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]

[tool.ruff]
select = ["E", "F", "N", "B", "A", "RET"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
